--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = \n",
+    "kindof_neighbors = cout\n",
     "kindof_neighbors"
    ]
   },
