automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -246,12 +246,10 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('')"
+    "countries.append('Malta')"
    ]
   },
   {
@@ -269,7 +267,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.appen"
    ]
   },
   {
